removed usage of too new API (JDK 10)